--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Test
+The following guides have been taken from dulfy.net as webarchive takes forever to load.
+
+<a href="/hmravagers.html">HM Ravagers</a>
