--- a/hmravagers/sparky.html
+++ b/hmravagers/sparky.html
@@ -254,9 +254,9 @@ Initially when you engage Sparky, she will have a Shield Collar that reduces her
 <p>No additional strategy information is available at this time.</p>
 <h4><span id="Full_Video_PoVs">Full Video PoVs</span></h4>
 <p>Tank PoV (Shieldtech Powertech):<br>
-<span class="embed-youtube" style="text-align:center; display: block;"><iframe class="youtube-player" type="text/html" width="448" height="252" src="https://web.archive.org/web/20190111230703if_/http://www.youtube.com/embed/8lPbwU4AFIA?version=3&amp;rel=1&amp;fs=1&amp;autohide=2&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;hd=1&amp;wmode=transparent" allowfullscreen="true" style="border:0;"></iframe></span>
+<span class="embed-youtube" style="text-align:center; display: block;"><iframe class="youtube-player" type="text/html" width="448" height="252" src="http://www.youtube.com/embed/8lPbwU4AFIA?version=3&amp;rel=1&amp;fs=1&amp;autohide=2&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;hd=1&amp;wmode=transparent" allowfullscreen="true" style="border:0;"></iframe></span>
 </p><p>DPS PoV (Virulence Sniper):<br>
-<span class="embed-youtube" style="text-align:center; display: block;"><iframe class="youtube-player" type="text/html" width="448" height="252" src="https://web.archive.org/web/20190111230703if_/http://www.youtube.com/embed/tmMUJnpNb8Y?version=3&amp;rel=1&amp;fs=1&amp;autohide=2&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;hd=1&amp;wmode=transparent" allowfullscreen="true" style="border:0;"></iframe></span>
+<span class="embed-youtube" style="text-align:center; display: block;"><iframe class="youtube-player" type="text/html" width="448" height="252" src="http://www.youtube.com/embed/tmMUJnpNb8Y?version=3&amp;rel=1&amp;fs=1&amp;autohide=2&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;hd=1&amp;wmode=transparent" allowfullscreen="true" style="border:0;"></iframe></span>
 </p><p>Healer PoV:<br>
 Not available at this time.</p>
 <div id="themify_builder_content-116053" data-postid="116053" class="themify_builder_content themify_builder_content-116053 themify_builder themify_builder_front">
